--- a/.infra/dev/.env
+++ b/.infra/dev/.env
@@ -1,2 +1,4 @@
 GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=host=postgres-16-1 port=5432 user=postgres password=pass123456 dbname=socnet sslmode=disable
+POSTGRESS_URL=postgres://postgres:pass123456@postgres-16-1:5432/socnet
+GIN_MODE=debug
