--- a/.infra/srv/psql/docker-compose.yml
+++ b/.infra/srv/psql/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
+       - ./data:/data/
        - pgadmin:/var/lib/pgadmin
     ports:
       - "${PGADMIN_PORT:-5050}:80"
