--- a/.infra/dev/Makefile
+++ b/.infra/dev/Makefile
@@ -15,3 +15,5 @@ srv-psql:
 	cd ../srv/psql;docker-compose -p $(PROJECT)-db up
 srv-k6:
 	cd ../srv/k6;docker-compose -p $(PROJECT)-hl-test up
+srv-prom:
+	cd ../srv/prometheus;docker-compose -p $(PROJECT)-hl up
