--- a/.infra/srv/psql/docker-compose.yml
+++ b/.infra/srv/psql/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     container_name: postgres_container
     image: postgres:16.1
+    shm_size: 1g
     hostname: postgres-16-1
     environment:
       POSTGRES_DB: "socnet"
