--- a/.infra/dev/Makefile
+++ b/.infra/dev/Makefile
@@ -11,9 +11,17 @@ down:
 	docker-compose -p $(PROJECT) down
 docker_stats:
 	docker stats $(PROJECT)
-srv-psql:
-	cd ../srv/psql;docker-compose -p $(PROJECT)-db up
+srv-psql-master:
+	cd ../srv/psql/master;docker-compose -p $(PROJECT)-db-master up
+srv-psql-s1:
+	cd ../srv/psql/s1;docker-compose -p $(PROJECT)-db-s1 up	
+srv-psql-s2:
+	cd ../srv/psql/s2;docker-compose -p $(PROJECT)-db-s2 up		
+srv-psql-pgadmin:
+	cd ../srv/psql/pgadmin;docker-compose -p $(PROJECT)-db-pgadmin up	
 srv-k6:
 	cd ../srv/k6;docker-compose -p $(PROJECT)-hl-test up
-srv-prom:
-	cd ../srv/prometheus;docker-compose -p $(PROJECT)-hl-prom up
+srv-monitoring:
+	cd ../srv/monitoring;docker-compose -p $(PROJECT)-hl-mon up
+srv-grafana:
+	cd ../srv/grafana;docker-compose -p $(PROJECT)-hl-grafana up	
