--- a/.infra/dev/.env
+++ b/.infra/dev/.env
@@ -1,5 +1,6 @@
 GOOSE_DRIVER=postgres
-GOOSE_DBSTRING=host=postgres-16-1 port=5432 user=postgres password=pass123456 dbname=socnet sslmode=disable
-POSTGRESS_URL=postgres://postgres:pass123456@postgres-16-1:5432/socnet
+GOOSE_DBSTRING=host=postgres-16-1-master port=5432 user=postgres password=123456 dbname=socnet sslmode=disable
+POSTGRESS_URL=postgres://postgres:123456@postgres-16-1-master:5432/socnet
+POSTGRESS_SLAVE_1_URL=postgres://postgres:123456@postgres-16-1-s1:5432/socnet
 GIN_MODE=debug
 TOKEN_SECRET_KEY=odin_dwa_tri_pyath
