--- a/.infra/srv/psql/master/postgresql.conf
+++ b/.infra/srv/psql/master/postgresql.conf
@@ -826,3 +826,6 @@ max_wal_senders = 3
 
 hot_standby = on
 hot_standby_feedback = on
+
+synchronous_commit = on
+synchronous_standby_names = 'FIRST 1 (s1, s2)'
