--- a/.infra/srv/psql/s2/postgresql.conf
+++ b/.infra/srv/psql/s2/postgresql.conf
@@ -820,4 +820,4 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
-primary_conninfo = 'host=postgres-16-1-master port=5432 user=replicator password=pass application_name=s2'
+primary_conninfo = 'host=postgres-16-1-s1 port=5432 user=replicator password=pass application_name=s2'
