--- a/.infra/srv/psql/s1/postgresql.conf
+++ b/.infra/srv/psql/s1/postgresql.conf
@@ -820,4 +820,6 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
-primary_conninfo = 'host=postgres-16-1-master port=5432 user=replicator password=pass application_name=s1'
+#primary_conninfo = 'host=postgres-16-1-master port=5432 user=replicator password=pass application_name=s1'
+synchronous_commit = on
+synchronous_standby_names = 'ANY 1 (s2)'
